--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react01",
+  "name": "y",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,13 +19,21 @@
     "wikipedia": "^2.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "app.js",
+  "author": "",
+  "license": "ISC"
 }
